--- a/act_Application/wwwroot/css/General/Home/Date-Place/DatePlace.css
+++ b/act_Application/wwwroot/css/General/Home/Date-Place/DatePlace.css
@@ -1,1 +1,12 @@
-﻿
+﻿.item2{
+    padding: 5px 5px 5px 5px;
+}
+
+.item3 {
+    padding: 5px 5px 5px 5px;
+}
+
+.item2 label,
+.item3 label{
+    font-size: 10pt;
+}
