--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<act_Application.Models.Sistema.ViewModels.Home_VM>
 @using act_Application.Data.Data;
+@using act_Application.Data;
 @using act_Application.Logic;
 @{
     ViewBag.Title = "Home";
@@ -7,6 +8,8 @@
     var eventosRepository = new EventosRepository();
     int contadorEventos = eventosRepository.GetDataEventos().TotalEventos;
     var valorVisualizacion = new MetodoVisualizacion();
+    var aportacionRepository = new AportacionRepository();
+    var multaRepository = new MultaRepository();
     var userIdClaim = User.Claims.FirstOrDefault(c => c.Type == "Id");
 }
 <head>
@@ -15,74 +18,89 @@
     <link rel="stylesheet" href="/css/General/Home/Esqueleto/Esqueleto.css" />
     <link rel="stylesheet" href="/css/General/Home/Profile/cardProfile.css" />
     <link rel="stylesheet" href="/css/General/Home/Main/TablaMain.css" />
-    <link rel="stylesheet" href="/css/General/Home/Footer/Botones-Footer.css" />
-    <link rel="stylesheet" href="/css/General/Home/Footer/VentanaModal.css" />
+    <link rel="stylesheet" href="/css/General/Home/Eventos/Eventos.css" />
+    <link rel="stylesheet" href="/css/General/Home/Eventos/VentanaModal.css" />
     <link rel="stylesheet" href="/css/General/Home/Date-Place/DatePlace.css" />
+    <link rel="stylesheet" href="/css/General/Home/Transaccion/Transacciones.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/Menu/Eventos/Eventos.js"></script>
-    <script src="../Logic/VisualizacionEventos.js"></script>
+    <script src="/js/Menu/Localizacion/localizacion.js"></script>
+
 </head>
 <body>
-    <div class="grid-container">
-        <div class="item1">
-            <div class="perfil-card">
-                <div class="cont-img">
-                    <img src="/img/Screenshot_38.png" alt="Imagen de perfil" />
-                </div>
-                <div class="cont-title">
-                    <span class="profession">@User.Identity.Name</span>
-                    <span class="tipousuario">@User.FindFirst("TipoUsuario")?.Value</span>
-                </div>
-            </div>
-        </div>
-        <div class="item2">
-            <label class="item2-title">Fecha Actual: </label>
-        </div>
-        <div class="item3">
-            <label class="item3-title">Ubicacion Actual: </label>
-        </div>
-        <div class="item4">
-            <label class="item4-title">Transacciones:  </label>
-        </div>
-        <div class="item5">
-            <table class="main">
-                <tr>
-                    <td class="col-aport">
-                        <label class="Taportacioes">Total de Aportaciones: </label>
-                        <label class="Vaportacioes" >Valor de Aportaciones: </label>
-                        <label class="CbancariaUsadas">Banco mas Usado: </label>
-                        <label class="Aaprobadas">Aportaciones Aprobadas</label>
-                    </td>
-                    <td class="col-mult">
-                        <label class="TMultas">Total de Multas: </label>
-                        <label class="VMultas">Valor de Multas: </label>
-                        <label class="MCanceladas">Multas Canceladas: </label>
-                        <label class="MFaltantes">Multas Restantes: </label>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-part" colspan="2">
-                        <label class="TEvent">Total de Eventos Participados</label>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="item6">
-            <div class="fila-supr">
-                <div class="fs-titulo">
-                    <label class="fs-t1">Eventos de Participacion</label>
+    @if (userIdClaim != null && int.TryParse(userIdClaim.Value, out int userId))
+    {
+        <div class="grid-container">
+            <div class="item1">
+                <div class="perfil-card">
+                    <div class="cont-img">
+                        <img src="/img/Screenshot_38.png" alt="Imagen de perfil" />
+                    </div>
+                    <div class="cont-title">
+                        <span class="profession">@User.Identity.Name</span>
+                        <span class="tipousuario">@User.FindFirst("TipoUsuario")?.Value</span>
+                    </div>
                 </div>
             </div>
-            <div class="fila-infr">
-                @if(contadorEventos > 0)
-                {
-                    @foreach (var evento in Model)
+            <div class="item2">
+                <label class="item2-title">Fecha Actual: </label>
+            </div>
+            <div class="item3">
+                <label class="item3-title">Ubicacion Actual: <span id="userLocation"></span></label>
+            </div>
+            <div class="item4">
+                <label class="item4-title">Transacciones:  </label>
+            </div>
+            <div class="item5">
+                <table class="main">
+                    <tr>
+                        <td class="col-aport">
+                            @if (aportacionRepository.GetExistApotacionesUser(userId) == true)
+                            {
+                                <label class="Taportacioes">Total de Aportaciones: </label>
+                                <label class="Vaportacioes">Valor de Aportaciones: </label>
+                                <label class="CbancariaUsadas">Banco mas Usado: </label>
+                                <label class="Aaprobadas">Aportaciones Aprobadas</label>
+                            }
+                            else
+                            {
+                                <label>No presentas datos de Aportaciones</label>
+                            }
+                        </td>
+                        <td class="col-mult">
+                            @if(multaRepository.GetExistMultasUser(userId) == true)
+                            {
+                                <label class="TMultas">Total de Multas: </label>
+                                <label class="VMultas">Valor de Multas: </label>
+                                <label class="MCanceladas">Multas Canceladas: </label>
+                                <label class="MFaltantes">Multas Restantes: </label>
+                            }
+                            else
+                            {
+                                <label>No presentas datos de Multas</label>
+                            }
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-part" colspan="2">
+                            <label class="TEvent">Total de Eventos Participados</label>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="item6">
+                <div class="fila-supr">
+                    <div class="fs-titulo">
+                        <label class="fs-t1">Eventos de Participacion</label>
+                    </div>
+                </div>
+                <div class="fila-infr">
+                    @if (contadorEventos > 0)
                     {
-                        @if(evento.Eventos.Estado =="CONCURSO")
+                        @foreach (var evento in Model)
                         {
-
-                            @if (userIdClaim != null && int.TryParse(userIdClaim.Value, out int userId))
+                            @if (evento.Eventos.Estado == "CONCURSO")
                             {
                                 var userIdentificacion = User.Claims.FirstOrDefault(c => c.Type == System.Security.Claims.ClaimTypes.Name)?.Value;
                                 @if (valorVisualizacion.CondicionVisualizacion(userId, userIdentificacion, evento.Eventos.ParticipantesNombre, evento.Eventos.ParticipantesId) == true)
@@ -111,20 +129,20 @@
                                     </div>
                                 }
                             }
-                            else
-                            {
-                                <label>Fallo obtener el id del Usuario</label>
-                            }
                         }
                     }
-                }
-                else
-                {
-                    <label>Por el momento no hay eventos para participar</label>
-                }
+                    else
+                    {
+                        <label>Por el momento no hay eventos para participar</label>
+                    }
 
+                </div>
             </div>
-        </div>
 
-    </div>
+        </div>
+    }
+    else
+    {
+        <label>Fallo obtener el id del Usuario</label>
+    }
 </body>
