--- a/act_Application/wwwroot/css/General/Home/Eventos/Eventos.css
+++ b/act_Application/wwwroot/css/General/Home/Eventos/Eventos.css
@@ -8,6 +8,9 @@
     justify-items: center;
 }
 
+    .item6 label {
+        font-size: 8pt;
+    }
 /* Estilos para fila-supr */
 .fila-supr {
     display: flex;
