--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -106,34 +106,30 @@
                     {
                         @foreach (var evento in Model)
                         {
-                            @if (userId != evento.Eventos.IdUser && evento.Eventos.Estado == "CONCURSO")
+                            var userIdentificacion = User.Claims.FirstOrDefault(c => c.Type == System.Security.Claims.ClaimTypes.Name)?.Value;
+                            @if (userId != evento.Eventos.IdUser && evento.Eventos.Estado == "CONCURSO" && valorVisualizacion.CondicionVisualizacion(userId, userIdentificacion, evento.Eventos.ParticipantesNombre, evento.Eventos.ParticipantesId) == true)
                             {
-                                var userIdentificacion = User.Claims.FirstOrDefault(c => c.Type == System.Security.Claims.ClaimTypes.Name)?.Value;
-                                @if (valorVisualizacion.CondicionVisualizacion(userId, userIdentificacion, evento.Eventos.ParticipantesNombre, evento.Eventos.ParticipantesId) == true)
-                                {
-                                    <div class="content-formulario" id="content-formulario-@evento.Eventos.Id">
-                                        <button type="submit" class="btn-participante" data-event-id="@evento.Eventos.Id">Evento #@evento.Eventos.Id </button>
-                                    </div>
-
-                                    <div class="eventos-modal" id="eventos-modal-@evento.Eventos.Id">
-                                        <div class="modal-content">
-                                            <div class="modal-supr">
-                                                <h2 class="modal-evento-titulo">Evento de Participacion #@evento.Eventos.Id</h2>
-                                                <p class="modal-parrafo">Nombre Referido Dueño de la Transaccion: @evento.Eventos.NombreUsuario</p>
-                                                <p class="modal-parrafo">Valor del Prestamo: @evento.Transacciones.Valor</p>
-                                                <p class="modal-parrafo">Tipo de Cuota: @evento.Transacciones.TipoCuota</p>
-                                                <p class="modal-parrafo">Fecha de Pago de Deuda: @evento.Transacciones.FechaPagoTotalPrestamo.ToString("dd-MMMM-yyyy")</p>
-                                            </div>
-                                            <div class="modal-infr" id="modal-infr-@evento.Eventos.Id">
-                                                <form asp-action="Participar">
-                                                    <input type="hidden" asp-for="@evento.Eventos.Id" id="IdP" name="IdP" />
-                                                    <button class="add-participante" type="submit" data-event-id="@evento.Eventos.Id">Participar</button>
-                                                    <a href="" class="close-modal" data-event-id="@evento.Eventos.Id">Cerrar</a>
-                                                </form>
-                                            </div>
+                                <div class="content-formulario" id="content-formulario-@evento.Eventos.Id">
+                                    <button type="submit" class="btn-participante" data-event-id="@evento.Eventos.Id">Evento #@evento.Eventos.Id </button>
+                                </div>
+                                <div class="eventos-modal" id="eventos-modal-@evento.Eventos.Id">
+                                    <div class="modal-content">
+                                        <div class="modal-supr">
+                                            <h2 class="modal-evento-titulo">Evento de Participacion #@evento.Eventos.Id</h2>
+                                            <p class="modal-parrafo">Nombre Referido Dueño de la Transaccion: @evento.Eventos.NombreUsuario</p>
+                                            <p class="modal-parrafo">Valor del Prestamo: @evento.Transacciones.Valor</p>
+                                            <p class="modal-parrafo">Tipo de Cuota: @evento.Transacciones.TipoCuota</p>
+                                            <p class="modal-parrafo">Fecha de Pago de Deuda: @evento.Transacciones.FechaPagoTotalPrestamo.ToString("dd-MMMM-yyyy")</p>
+                                        </div>
+                                        <div class="modal-infr" id="modal-infr-@evento.Eventos.Id">
+                                            <form asp-action="Participar">
+                                                <input type="hidden" asp-for="@evento.Eventos.Id" id="IdP" name="IdP" />
+                                                <button class="add-participante" type="submit" data-event-id="@evento.Eventos.Id">Participar</button>
+                                                <a href="" class="close-modal" data-event-id="@evento.Eventos.Id">Cerrar</a>
+                                            </form>
                                         </div>
                                     </div>
-                                }
+                                </div>
                             }
                         }
                     }
