--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -9,6 +9,7 @@
     var valorVisualizacion = new MetodoVisualizacion();
     var aportacionRepository = new AportacionRepository();
     var multaRepository = new MultaRepository();
+    var transaccionesRepository = new TransaccionesRepository();
     var userIdClaim = User.Claims.FirstOrDefault(c => c.Type == "Id");
 }
 <head>
@@ -48,7 +49,30 @@
                 <label class="item3-title">Ubicacion Actual: <span id="userLocation"></span></label>
             </div>
             <div class="item4">
-                <label class="item4-title">Transacciones:  </label>
+                <label>Transacciones</label>
+                <div class="trans-container">
+                    @if(transaccionesRepository.GetExistTransaccionesUser(userId) == true)
+                    {
+                        var firstModel = Model.FirstOrDefault();
+                        if(firstModel != null)
+                        {
+                            <p>Total de Prestamos: @firstModel.TransaccionesUser.TotalTransacciones</p>
+                            <p>Total de Prestamos Aprobados: @firstModel.TransaccionesUser.TotalAprobado</p>
+                            <p>Total de Prestamos Pendientes: @firstModel.TransaccionesUser.TotalPendiente</p>
+                            <p>Total de Prestamos Rechazados: @firstModel.TransaccionesUser.TotalRechazado</p>
+                            <hr />
+                            <p>Valor de Prestamos Acumulados: @firstModel.TransaccionesUser.ValorTotalPrestado</p>
+                        }
+                        else
+                        {
+                            <p>Por el momento no presentas Acciones de Prestamo</p>
+                        }
+                    }
+                    else
+                    {
+                        <p>Por el momento no presentas Acciones de Prestamo</p>
+                    }
+                </div>
             </div>
             <div class="item5">
                 <table class="main">
@@ -59,16 +83,20 @@
                                 var firstModel = Model.FirstOrDefault();
                                 if (firstModel != null)
                                 {
-                                    <label class="Taportacioes">Total de Aportaciones: @firstModel.AportacionesUser.TotalAportaciones</label>
-                                    <label class="Aaprobadas">Aportaciones Aprobadas: @firstModel.AportacionesUser.TotalAprobados</label>
-                                    <label class="Aaprobadas">Aportaciones En Espera: @firstModel.AportacionesUser.TotalEspera</label>
-                                    <label class="Vaportacioes">Valor de Aportaciones Totales: @firstModel.AportacionesUser.AportacionesAcumuladas</label>
-                                    <label class="CbancariaUsadas">Banco mas Usado: </label>
+                                    <p class="Taportacioes">Total de Aportaciones: @firstModel.AportacionesUser.TotalAportaciones</p>
+                                    <p class="Aaprobadas">Aportaciones Aprobadas: @firstModel.AportacionesUser.TotalAprobados</p>
+                                    <p class="Aaprobadas">Aportaciones En Espera: @firstModel.AportacionesUser.TotalEspera</p>
+                                    <p class="Vaportacioes">Valor de Aportaciones Totales: @firstModel.AportacionesUser.AportacionesAcumuladas</p>
+                                    <p class="CbancariaUsadas">Banco mas Usado: </p>
+                                }
+                                else
+                                {
+                                    <p>Por el momento no tienes Aportaciones</p>
                                 }
                             }
                             else
                             {
-                                <label>Por el Momento no tienes Aportaciones Realizadas</label>
+                                <p>Por el Momento no tienes Aportaciones Realizadas</p>
                             }
                             </td>
                             <td class="col-mult">
@@ -77,14 +105,18 @@
                                 var firstModel = Model.FirstOrDefault();
                                 if (firstModel != null)
                                 {
-                                    <label class="TMultas">Total de Multas: @firstModel.MultaUser.TotalMultas</label>
-                                    <label class="MCanceladas">Multas Canceladas: @firstModel.MultaUser.TotalCancelados</label>
-                                    <label class="VMultas">Valor de Multas: @firstModel.MultaUser.MultasAcumuladas</label>
+                                    <p class="TMultas">Total de Multas: @firstModel.MultaUser.TotalMultas</p>
+                                    <p class="MCanceladas">Multas Canceladas: @firstModel.MultaUser.TotalCancelados</p>
+                                    <p class="VMultas">Valor de Multas: @firstModel.MultaUser.MultasAcumuladas</p>
+                                }
+                                else
+                                {
+                                    <p>Por el momento no tienes Multas</p>
                                 }
                             }
                             else
                             {
-                                <label>Por el Momento no presentas Multas</label>
+                                <p>Por el Momento no presentas Multas</p>
                             }
                             </td>
                         </tr>
@@ -130,6 +162,10 @@
                                         </div>
                                     </div>
                                 </div>
+                            }
+                            else
+                            {
+                                <label>Por el momento no hay eventos para participar</label>
                             }
                         }
                     }
