Cambios en Tabla

--- a/act_Application/Views/Administrador/AdminCuotas.cshtml
+++ b/act_Application/Views/Administrador/AdminCuotas.cshtml
@@ -22,7 +22,7 @@
                     @Html.DisplayNameFor(model => model.IdUser)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.IdTransaccion)
+                    @Html.DisplayNameFor(model => model.IdPrestamo)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.ValorCuota)
@@ -46,7 +46,7 @@
                         @Html.DisplayFor(modelItem => item.IdUser)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.IdTransaccion)
+                        @Html.DisplayFor(modelItem => item.IdPrestamo)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.ValorCuota)
