--- a/act_Application/Views/Administrador/AdminTransacciones.cshtml
+++ b/act_Application/Views/Administrador/AdminTransacciones.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<act_Application.Models.BD.ActTransaccione>
+﻿@model IEnumerable<act_Application.Models.BD.ActPrestamo>
 
 @{
     ViewData["Title"] = "Notificaciones";
