--- a/act_Application/Views/Administrador/CreateTransacciones.cshtml
+++ b/act_Application/Views/Administrador/CreateTransacciones.cshtml
@@ -1,4 +1,4 @@
-﻿@model act_Application.Models.BD.ActTransaccione
+﻿@model act_Application.Models.BD.ActPrestamo
 
 @{
     ViewData["Title"] = "Create";
