--- a/act_Application/Views/Administrador/DeleteCuotas.cshtml
+++ b/act_Application/Views/Administrador/DeleteCuotas.cshtml
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td class="titulo">Id Transaccion</td>
-                <td class="texto">@Html.DisplayFor(model => model.IdTransaccion)</td>
+                <td class="texto">@Html.DisplayFor(model => model.IdPrestamo)</td>
             </tr>
             <tr>
                 <td class="titulo">Valor CUota</td>
