--- a/act_Application/Views/Administrador/CreateCuotas.cshtml
+++ b/act_Application/Views/Administrador/CreateCuotas.cshtml
@@ -21,9 +21,9 @@
                     <span asp-validation-for="IdUser" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="IdTransaccion" class="control-label"></label>
-                    <input asp-for="IdTransaccion" class="form-control" />
-                    <span asp-validation-for="IdTransaccion" class="text-danger"></span>
+                    <label asp-for="IdPrestamo" class="control-label"></label>
+                    <input asp-for="IdPrestamo" class="form-control" />
+                    <span asp-validation-for="IdPrestamo" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="ValorCuota" class="control-label"></label>
