--- a/act_Application/Views/Prestamos/Prestamos.cshtml
+++ b/act_Application/Views/Prestamos/Prestamos.cshtml
@@ -1,7 +1,7 @@
-﻿@model act_Application.Models.BD.ActTransaccione;
+﻿@model act_Application.Models.BD.ActPrestamo;
 @using act_Application.Models.Sistema.Complementos;
 @{
-    ViewData["Title"] = "Transaccion";
+    ViewData["Title"] = "Prestamos";
 
     DateTime minDate = DateTime.Now.AddDays(14);
     string minDateStr = minDate.ToString("yyyy-MM-dd");
