--- a/act_Application/Views/Prestamos/Prestamos.cshtml
+++ b/act_Application/Views/Prestamos/Prestamos.cshtml
@@ -13,9 +13,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="~/css/General/Transacciones/Transacciones.css" />
+    <link rel="stylesheet" href="~/css/General/Prestamos/Prestamos.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="~/js/Transaccion/Transaccion.js"> </script>
+    <script src="~/js/Prestamos/Prestamos.js"> </script>
 </head>
 <div>
     <div class="container">
