Objetivo 1 - Login HTML, CSS y JS de Registro

--- a/act_Application/Views/Login/Index.cshtml
+++ b/act_Application/Views/Login/Index.cshtml
@@ -39,7 +39,7 @@
                             </div>
                         </form>
                         <div class="signin">
-                            <span>Necesitas una cuenta? <a href="#">Haz clic aqui</a></span>
+                            <span>Necesitas una cuenta? <a href="/Login/Registrarse">Haz clic aqui</a></span>
                         </div>
                     </div>
                 </div>
