Objetivo 1 - Login 1. Vista de Login Completada 2. Vista de Registro Completado 3. Metodo Controlador de Registro Completo pero a falta de Servicio de Notificacion SMTP

--- a/act_Application/Views/Login/Index.cshtml
+++ b/act_Application/Views/Login/Index.cshtml
@@ -26,16 +26,16 @@
                         <header>Iniciar Sesion</header>
                         <form action="@Url.Action("Index","Login")" method="post">
                             <div class="input-field">
-                                <input type="text" class="input" id="email" required="" autocomplete="off" name="Correo">
+                                <input type="text" class="input" id="email" autocomplete="off" name="Correo" required />
                                 <label for="email">Email</label>
                             </div>
 
                             <div class="input-field">
-                                <input type="password" class="input" id="pass" required="" name="Contrasena">
+                                <input type="password" class="input" id="pass" name="Contrasena" required />
                                 <label for="pass">Password</label>
                             </div>
                             <div class="input-field">
-                                <input type="submit" class="submit" value="Log in here">
+                                <input type="submit" class="submit" value="Log in here" />
                             </div>
                         </form>
                         <div class="signin">
