Objetivo 1 - Login 1. Secciones a Corregir en Formulario y Controlador Registro

--- a/act_Application/Views/Login/Registrarse.cshtml
+++ b/act_Application/Views/Login/Registrarse.cshtml
@@ -4,13 +4,11 @@
     Layout = null;
 }
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="/css/General/Login/Registro.css" />
     <!----===== Iconscout CSS ===== -->
@@ -20,7 +18,7 @@
     <div class="container">
         <header>Registro</header>
 
-        <form asp-action="Registrarse">
+        <form asp-action="Registro" method="post" enctype="multipart/form-data">
             <div class="form first">
                 <div class="details personal">
                     <span class="title">Informacion</span>
