Objetivo 1 - Login 1. Trigger en BD.

--- a/act_Application/Views/Login/Index.cshtml
+++ b/act_Application/Views/Login/Index.cshtml
@@ -54,4 +54,16 @@
         </div>
     </div>
 
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <script>
+            $(document).ready(function () {
+                var errorMessage = '@TempData["ErrorMessage"]';
+                if (errorMessage) {
+                    $('#myModal p').text(errorMessage);
+                    $('#myModal').modal('show');
+                }
+            });
+        </script>
+    }
 </body>
